--- a/src/components/category-container/category-container.styles.scss
+++ b/src/components/category-container/category-container.styles.scss
@@ -42,21 +42,27 @@
     }
   
     .category-body-container {
-      height: 90px;
-      padding: 0 25px;
+      height: 6rem;
+      padding: 0 1.5rem;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
       border: 1px solid black;
       background-color: white;
-      opacity: 0.7;
+      opacity: 0.8;
       position: absolute;
+      background: url(http://localhost:3000/images/stat-block-top-texture.png),url(http://localhost:3000/images/paper-texture.png);
+      background-position: top;
+      background-repeat: no-repeat,repeat;
+      background-size: 100% auto;
+      border: 2px solid #3b3838;
+      box-shadow: 0 0 5px #3b3838;
   
       h2 {
         font-weight: bold;
-        margin: 0 6px 0;
-        font-size: 22px;
+        margin: 0.8rem 0.4rem 0;
+        font-size: 1.2em;
         color: #4a4a4a;
       }
   
