--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  font-size: 16px;
   background-color: lightgray;
   font-family: 'Marcellus', sans-serif;
   -webkit-font-smoothing: antialiased;
