--- a/src/routes/authentication/authentication.styles.scss
+++ b/src/routes/authentication/authentication.styles.scss
@@ -1,4 +1,5 @@
 .authentication-container {
+    padding: 1.25rem 2.5rem;
     display: flex;
     justify-content: space-between;
     width: 900px;
