--- a/src/index.scss
+++ b/src/index.scss
@@ -2,6 +2,10 @@
   font-family: 'BreatheFireIii';
   src: url('http://localhost:3000/fonts/BreatheFireIii-PKLOB.ttf');
 }
+  * {
+  box-sizing: border-box;
+  }
+
 
 body {
   margin: 0;
@@ -12,18 +16,15 @@ body {
   -moz-osx-font-smoothing: grayscale;
   display: flex;
   flex-direction: column;
-}
-h1 { font-family: 'BreatheFireIii', 'Georgia', serif; }
-code {
+  position: relative;
+  padding-bottom: 6rem;
+  h1 { font-family: 'BreatheFireIii', 'Georgia', serif; }
+  code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
-}
-
-a {
-  text-decoration: none;
-  color: black;
-}
-
-* {
-  box-sizing: border-box;
+  }
+  a {
+    text-decoration: none;
+    color: black;
+  }
 }
