Fixed issue with font not loading in build

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'BreatheFireIii';
-  src: url('http://localhost:3000/fonts/BreatheFireIii-PKLOB.ttf');
+  src: url('https://fitz.willdigitalworks.com//fonts/BreatheFireIii-PKLOB.woff2');
 }
   * {
   box-sizing: border-box;
